--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,10 @@ version = "0.1.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-async-tungstenite = "^0.8.0"
+async-tungstenite = "0.15.0"
 base32 = "0.4.0"
 fastrand = "^1"
-futures-util = "0.3.5"
+futures-util = "0.3.17"
 serde = {version = "^1", features = ["derive", "rc"]}
 serde_json = "^1"
 smol = "^1"
